# Examples

./: .gitignore  DataManager.cpp  DataManager.h  FFT.C  FFT_C.d  HaddList.py  HistData.cpp  Makefile  Program  PythonExample.py  README.md  ROOTMacro.C  bintest.C  data  main.cpp  plotgraph.cpp  rsync.py
Bash/: rpctest.sh
C/: Makefile  main.c  program
C/char/: main.c
C/mthread/: Makefile  mthread.c  program
ML/kerastry/: KerasTry.ipynb
ML/w3example/: Petal.ipynb  W3ML.ipynb
Python/: FirstTry.ipynb  FirstTry.py  Google1.py  Google2.py  PyRootTest.py  README  SecondTry.py  SecondTry.py~  ThirdTry.py  figout  figout.html  figout.json  ftp.py  ftp_backup.py  mpld3_test.py  pyRootTry.py  solve.py  tempfile  test.txt
Python/.ipynb_checkpoints/: FirstTry-checkpoint.ipynb
Python/C-interface/: Makefile  README  functions.c  functions.h  main  main.c  shared_main  use_c.py
Python/readTree/: read_tree.C  read_tree.py  read_tree_C.d  read_tree_rootpy.py  write_tree.C  write_tree_C.d
Singleton/: Global.cpp  Global.h  Hit.cpp  Hit.h  Makefile  Module.cpp  Module.h  Program  a.out  main.cpp  onlineExample.cpp
cmake/: CMakeLists.txt  main.cpp
cmake/cmake_example/: ReadMe
cmake/include/: IOManager.h
cmake/src/: IOManager.cpp
cpp/: Uniform.cpp  a.out
cpp/code/: main  main.cpp
cpp/thread/: CMakeLists.txt  thread.cpp
json/: custom_page.html  testInterval.html
tcl/: hello_world.tcl
